--- a/src/app.css
+++ b/src/app.css
@@ -44,10 +44,11 @@ h1, h2, h3, h4, h5, h6, .heading {
     font-family: 'Oswald', sans-serif;
     font-size: 1.2rem; /* Adjust size as needed */
     font-weight: 400; /* Bungee Shade only has one weight */
-    color: #fcfaf7; /* Amber color */
+    color: #fcfcfc; /* Amber color */
     opacity: 1; /* Make it fully opaque */
     letter-spacing: 0.1em; /* Add some letter spacing */
     text-transform: uppercase; /* Uppercase the text */
+    font-size: clamp(0.7rem, 3vw, 1rem);
 }
 
 body {
@@ -143,6 +144,7 @@ blockquote {
     border-left: 3px solid var(--color-theme-2);
     font-style: italic;
     margin-bottom: 1.5rem;
+    font-size: clamp(1rem, 4vw, 2rem);
 }
 
 .text-column {
